tests/should-fail/flags/no-modulo-flag.j
//# +nomodulooperator
function x takes nothing returns nothing
    local integer i = 103 % 53
endfunction
